--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
-langgraph
-langgraph-prebuilt
-langgraph-sdk
-langgraph-checkpoint-sqlite
-langsmith
-langchain-community
-langchain-core
-langchain-openai
-notebook
-tavily-python
-wikipedia
-trustcall
-langgraph-cli[inmem]
+langgraph==0.6.10
+langgraph-prebuilt==0.6.4
+langgraph-sdk==0.2.9
+langgraph-checkpoint-sqlite==2.0.11
+langsmith==0.4.35
+langchain-community==0.3.31
+langchain-core==0.3.79
+langchain-openai==0.3.35
+notebook==7.4.7
+tavily-python==0.7.12
+wikipedia==1.4.0
+trustcall==0.0.39
+langgraph-cli[inmem]==0.4.3
+python-dotenv==1.1.1
